sem4pi-22-23-55-master/base.core/src/main/java/eapli/base/examManagement/addQuestion/addQuestionParser.java
// Generated from C:/Users/milen/Documents/Faculdade/2 ANO/LAPR4/sem4pi-22-23-55/base.core/src/main/java/eapli/base/examManagement/addQuestion\addQuestion.g4 by ANTLR 4.12.0
package eapli.base.examManagement.addQuestion;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class addQuestionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		TEXTTF=10, TEXT=11, TEXTMULTIPLA=12, CORRESPONDENCIA=13, ESCOLHA_MULTIPLA=14, 
		RESPOSTA_CURTA=15, VERDADEIRO_OU_FALSO=16, PALAVRAS_EM_FALTA=17, NEWLINE=18, 
		WS=19;
	public static final int
		RULE_start = 0, RULE_addQuestion = 1, RULE_questionContent = 2, RULE_correspondencia = 3, 
		RULE_correspondenciaOptions = 4, RULE_correspondenciaOption = 5, RULE_respostaCurta = 6, 
		RULE_verdadeiroOuFalso = 7, RULE_escolhaMultipla = 8, RULE_optionsMultplas = 9, 
		RULE_optionsMultpla = 10, RULE_palavrasEmFalta = 11, RULE_palavrasEmFaltaOptions = 12, 
		RULE_palavrasEmFaltaOption = 13, RULE_numerica = 14, RULE_solution = 15, 
		RULE_solutionVerdadeiroFalso = 16, RULE_solotionMultipla = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "addQuestion", "questionContent", "correspondencia", "correspondenciaOptions", 
			"correspondenciaOption", "respostaCurta", "verdadeiroOuFalso", "escolhaMultipla", 
			"optionsMultplas", "optionsMultpla", "palavrasEmFalta", "palavrasEmFaltaOptions", 
			"palavrasEmFaltaOption", "numerica", "solution", "solutionVerdadeiroFalso", 
			"solotionMultipla"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Type: '", "'Question: '", "'Option:'", "'->'", "'Text: '", "'Missing Words: '", 
			"','", "'Numeric'", "'Solution: '", null, null, null, "'correspondencia'", 
			"'Escolha Multipla'", "'Resposta Curta'", "'Verdadeiro ou Falso'", "'Palavras em Falta'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "TEXTTF", 
			"TEXT", "TEXTMULTIPLA", "CORRESPONDENCIA", "ESCOLHA_MULTIPLA", "RESPOSTA_CURTA", 
			"VERDADEIRO_OU_FALSO", "PALAVRAS_EM_FALTA", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "addQuestion.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public addQuestionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public AddQuestionContext addQuestion() {
			return getRuleContext(AddQuestionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(addQuestionParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			addQuestion();
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AddQuestionContext extends ParserRuleContext {
		public QuestionContentContext questionContent() {
			return getRuleContext(QuestionContentContext.class,0);
		}
		public AddQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterAddQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitAddQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitAddQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddQuestionContext addQuestion() throws RecognitionException {
		AddQuestionContext _localctx = new AddQuestionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_addQuestion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__0);
			setState(40);
			questionContent();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContentContext extends ParserRuleContext {
		public CorrespondenciaContext correspondencia() {
			return getRuleContext(CorrespondenciaContext.class,0);
		}
		public EscolhaMultiplaContext escolhaMultipla() {
			return getRuleContext(EscolhaMultiplaContext.class,0);
		}
		public RespostaCurtaContext respostaCurta() {
			return getRuleContext(RespostaCurtaContext.class,0);
		}
		public VerdadeiroOuFalsoContext verdadeiroOuFalso() {
			return getRuleContext(VerdadeiroOuFalsoContext.class,0);
		}
		public PalavrasEmFaltaContext palavrasEmFalta() {
			return getRuleContext(PalavrasEmFaltaContext.class,0);
		}
		public NumericaContext numerica() {
			return getRuleContext(NumericaContext.class,0);
		}
		public QuestionContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterQuestionContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitQuestionContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitQuestionContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContentContext questionContent() throws RecognitionException {
		QuestionContentContext _localctx = new QuestionContentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_questionContent);
		try {
			setState(48);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CORRESPONDENCIA:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				correspondencia();
				}
				break;
			case ESCOLHA_MULTIPLA:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				escolhaMultipla();
				}
				break;
			case RESPOSTA_CURTA:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				respostaCurta();
				}
				break;
			case VERDADEIRO_OU_FALSO:
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				verdadeiroOuFalso();
				}
				break;
			case PALAVRAS_EM_FALTA:
				enterOuterAlt(_localctx, 5);
				{
				setState(46);
				palavrasEmFalta();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 6);
				{
				setState(47);
				numerica();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CorrespondenciaContext extends ParserRuleContext {
		public TerminalNode CORRESPONDENCIA() { return getToken(addQuestionParser.CORRESPONDENCIA, 0); }
		public CorrespondenciaOptionsContext correspondenciaOptions() {
			return getRuleContext(CorrespondenciaOptionsContext.class,0);
		}
		public SolutionContext solution() {
			return getRuleContext(SolutionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(addQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(addQuestionParser.NEWLINE, i);
		}
		public List<TerminalNode> TEXT() { return getTokens(addQuestionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(addQuestionParser.TEXT, i);
		}
		public CorrespondenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_correspondencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterCorrespondencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitCorrespondencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitCorrespondencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorrespondenciaContext correspondencia() throws RecognitionException {
		CorrespondenciaContext _localctx = new CorrespondenciaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_correspondencia);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(CORRESPONDENCIA);
			setState(52); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(51);
				match(NEWLINE);
				}
				}
				setState(54); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(56);
			match(T__1);
			setState(58); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(57);
				match(TEXT);
				}
				}
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				match(NEWLINE);
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(67);
			match(T__2);
			setState(69); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				match(NEWLINE);
				}
				}
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(73);
			correspondenciaOptions();
			setState(74);
			solution();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CorrespondenciaOptionsContext extends ParserRuleContext {
		public List<CorrespondenciaOptionContext> correspondenciaOption() {
			return getRuleContexts(CorrespondenciaOptionContext.class);
		}
		public CorrespondenciaOptionContext correspondenciaOption(int i) {
			return getRuleContext(CorrespondenciaOptionContext.class,i);
		}
		public CorrespondenciaOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_correspondenciaOptions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterCorrespondenciaOptions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitCorrespondenciaOptions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitCorrespondenciaOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorrespondenciaOptionsContext correspondenciaOptions() throws RecognitionException {
		CorrespondenciaOptionsContext _localctx = new CorrespondenciaOptionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_correspondenciaOptions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			correspondenciaOption();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEXT) {
				{
				{
				setState(77);
				correspondenciaOption();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CorrespondenciaOptionContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(addQuestionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(addQuestionParser.TEXT, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(addQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(addQuestionParser.NEWLINE, i);
		}
		public CorrespondenciaOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_correspondenciaOption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterCorrespondenciaOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitCorrespondenciaOption(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitCorrespondenciaOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorrespondenciaOptionContext correspondenciaOption() throws RecognitionException {
		CorrespondenciaOptionContext _localctx = new CorrespondenciaOptionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_correspondenciaOption);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(TEXT);
			setState(84);
			match(T__3);
			setState(85);
			match(TEXT);
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86);
				match(NEWLINE);
				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RespostaCurtaContext extends ParserRuleContext {
		public TerminalNode RESPOSTA_CURTA() { return getToken(addQuestionParser.RESPOSTA_CURTA, 0); }
		public SolutionContext solution() {
			return getRuleContext(SolutionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(addQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(addQuestionParser.NEWLINE, i);
		}
		public List<TerminalNode> TEXT() { return getTokens(addQuestionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(addQuestionParser.TEXT, i);
		}
		public RespostaCurtaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_respostaCurta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterRespostaCurta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitRespostaCurta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitRespostaCurta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RespostaCurtaContext respostaCurta() throws RecognitionException {
		RespostaCurtaContext _localctx = new RespostaCurtaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_respostaCurta);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(RESPOSTA_CURTA);
			setState(93); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(92);
				match(NEWLINE);
				}
				}
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(97);
			match(T__1);
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(98);
				match(TEXT);
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			setState(104); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(103);
				match(NEWLINE);
				}
				}
				setState(106); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(108);
			solution();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VerdadeiroOuFalsoContext extends ParserRuleContext {
		public TerminalNode VERDADEIRO_OU_FALSO() { return getToken(addQuestionParser.VERDADEIRO_OU_FALSO, 0); }
		public SolutionVerdadeiroFalsoContext solutionVerdadeiroFalso() {
			return getRuleContext(SolutionVerdadeiroFalsoContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(addQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(addQuestionParser.NEWLINE, i);
		}
		public List<TerminalNode> TEXT() { return getTokens(addQuestionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(addQuestionParser.TEXT, i);
		}
		public VerdadeiroOuFalsoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verdadeiroOuFalso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterVerdadeiroOuFalso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitVerdadeiroOuFalso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitVerdadeiroOuFalso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VerdadeiroOuFalsoContext verdadeiroOuFalso() throws RecognitionException {
		VerdadeiroOuFalsoContext _localctx = new VerdadeiroOuFalsoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_verdadeiroOuFalso);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(VERDADEIRO_OU_FALSO);
			setState(112); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(111);
				match(NEWLINE);
				}
				}
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(116);
			match(T__1);
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(117);
				match(TEXT);
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				match(NEWLINE);
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(127);
			solutionVerdadeiroFalso();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EscolhaMultiplaContext extends ParserRuleContext {
		public TerminalNode ESCOLHA_MULTIPLA() { return getToken(addQuestionParser.ESCOLHA_MULTIPLA, 0); }
		public OptionsMultplasContext optionsMultplas() {
			return getRuleContext(OptionsMultplasContext.class,0);
		}
		public SolotionMultiplaContext solotionMultipla() {
			return getRuleContext(SolotionMultiplaContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(addQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(addQuestionParser.NEWLINE, i);
		}
		public List<TerminalNode> TEXT() { return getTokens(addQuestionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(addQuestionParser.TEXT, i);
		}
		public EscolhaMultiplaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escolhaMultipla; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterEscolhaMultipla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitEscolhaMultipla(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitEscolhaMultipla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscolhaMultiplaContext escolhaMultipla() throws RecognitionException {
		EscolhaMultiplaContext _localctx = new EscolhaMultiplaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_escolhaMultipla);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(ESCOLHA_MULTIPLA);
			setState(131); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(130);
				match(NEWLINE);
				}
				}
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(135);
			match(T__1);
			setState(137); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(136);
				match(TEXT);
				}
				}
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			setState(142); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141);
				match(NEWLINE);
				}
				}
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(146);
			match(T__2);
			setState(148); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(147);
				match(NEWLINE);
				}
				}
				setState(150); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(152);
			optionsMultplas();
			setState(153);
			solotionMultipla();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionsMultplasContext extends ParserRuleContext {
		public List<OptionsMultplaContext> optionsMultpla() {
			return getRuleContexts(OptionsMultplaContext.class);
		}
		public OptionsMultplaContext optionsMultpla(int i) {
			return getRuleContext(OptionsMultplaContext.class,i);
		}
		public OptionsMultplasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionsMultplas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).enterOptionsMultplas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof addQuestionListener ) ((addQuestionListener)listener).exitOptionsMultplas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof addQuestionVisitor ) return ((addQuestionVisitor<? extends T>)visitor).visitOptionsMultplas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionsMultplasContext optionsMultplas() throws RecognitionException {
		OptionsMultplasContext _localctx = new OptionsMultplasContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_optionsMultplas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			optionsMultpla();
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEXT) {
				{
				{
				setState(156);
				optionsMultpla();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
